[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Algorithms"]
description = "Curp consensus protocol"
edition = "2021"
keywords = ["consensus", "distributed"]
license = "Apache-2.0"
name = "curp"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/curp"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.4"
async-trait = "0.1.53"
bincode = "1.3.3"
bytes = "1.4.0"
clippy-utilities = "0.2.0"
curp-external-api = { path = "../curp-external-api" }
dashmap = "5.5.0"
derive_builder = "0.13.0"
engine = { path = "../engine" }
event-listener = "2.5.2"
flume = "0.10.14"
fs2 = "0.4.3"
futures = "0.3.21"
indexmap = "1.9.2"
itertools = "0.11"
madsim = { version = "0.2.26", features = ["rpc", "macros"] }
opentelemetry = { version = "0.21.0", features = ["metrics"] }
parking_lot = "0.12.1"
priority-queue = "1.3.2"
prost = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive", "rc"] }
sha2 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "0.2.23", package = "madsim-tokio", features = [
  "rt-multi-thread",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad", features = [
  "net",
] }
tokio-util = "0.7.10"
tonic = { version = "0.4.1", package = "madsim-tonic", features = ["tls"] }
tower = { version = "0.4.13", features = ["filter"] }
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
anyhow = "1.0.81"
curp-test-utils = { path = "../curp-test-utils" }
itertools = "0.11"
mockall = "0.12.1"
once_cell = "1.17.0"
tempfile = "3"
test-macros = { path = "../test-macros" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing-test = "0.2.4"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = { version = "0.4.2", package = "madsim-tonic-build" }

[features]
client-metrics = []
