[package]
authors = ["DatenLord <dev@datenlord.io>"]
description = "Xline Persistent Layer "
categories = ["Storage Engine"]
keywords = ["storage engine"]
license = "Apache-2.0"
repository = "https://github.com/xline-kv/Xline/tree/master/storage"
readme = "../README.md"
name = "engine"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bincode = "1.3.3"
bytes = "1.4.0"
clippy-utilities = "0.2.0"
opentelemetry = { version = "0.21.0", features = ["metrics"] }
parking_lot = "0.12.2"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "0.2.25", package = "madsim-tokio", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "io-util",
] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1.40"
utils = { path = "../utils" }
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
test-macros = { path = "../test-macros" }
