[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/tests/simulation"
description = "Madsim simulation for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Test"]
keywords = ["Test", "Deterministic Simulation"]

[dependencies]
async-trait = "0.1.81"
bincode = "1.3.3"
curp = { path = "../curp" }
curp-test-utils = { path = "../curp-test-utils" }
engine = { path = "../engine" }
futures = "0.3.29"
itertools = "0.13"
madsim = "0.2.27"
parking_lot = "0.12.3"
prost = "0.13"
tempfile = "3"
tokio = { version = "0.2.25", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "sync",
    "macros",
    "time",
    "signal",
] }
tonic = { version = "0.5.0", package = "madsim-tonic" }
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xline = { path = "../xline" }
xline-client = { path = "../xline-client" }
xlineapi = { path = "../xlineapi" }

[build-dependencies]
tonic-build = { version = "0.5.0", package = "madsim-tonic-build" }
