[package]
name = "utils"
version = "0.1.0"
authors = ["DatenLord Developers <dev@datenlord.io>"]
edition = "2021"
description = "Utilities functions for Xline"
repository = "https://github.com/xline-kv/Xline/tree/master/utils"
readme = "README.md"
license = "MIT"
keywords = ["utilities"]
categories = ["utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["std", "tokio", "parking_lot"]
std = []
tokio = ["dep:async-trait"]
parking_lot = ["dep:parking_lot"]

[dependencies]
async-trait = { version = "0.1.60", optional = true }
clippy-utilities = "0.2.0"
dashmap = "5.5.3"
derive_builder = "0.13.0"
getset = "0.1"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.0", features = ["trace"] }
parking_lot = { version = "0.12.1", optional = true }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
petgraph = "0.6.4"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "0.2.23", package = "madsim-tokio", features = [
  "sync",
  "macros",
  "rt-multi-thread",
] }
toml = "0.8.8"
tonic = { version = "0.4.1", package = "madsim-tonic" }
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-opentelemetry = "0.22.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
opentelemetry-jaeger = "0.20.0"
test-macros = { path = "../test-macros" }
tracing-subscriber = "0.3.16"
