[package]
name = "utils"
version = "0.1.0"
authors = ["DatenLord Developers <dev@datenlord.io>"]
edition = "2021"
description = "Utilities functions for Xline"
repository = "https://github.com/xline-kv/Xline/tree/master/utils"
readme = "README.md"
license = "MIT"
keywords = ["utilities"]
categories = ["utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["std", "tokio", "parking_lot"]
std = []
tokio = ["dep:async-trait"]
parking_lot = ["dep:parking_lot"]

[dependencies]
async-trait = { version = "0.1.81", optional = true }
clippy-utilities = "0.2.0"
dashmap = "6.1.0"
derive_builder = "0.20.0"
event-listener = "5.3.1"
futures = "0.3.30"
getset = "0.1"
interval_map = { version = "0.1", package = "rb-interval-map" }
opentelemetry = { version = "0.24.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.24.1", features = ["trace"] }
parking_lot = { version = "0.12.3", optional = true }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "0.2.25", package = "madsim-tokio", features = [
  "sync",
  "macros",
  "rt-multi-thread",
] }
toml = "0.8.14"
tonic = { version = "0.5.0", package = "madsim-tonic" }
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-opentelemetry = "0.25.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
opentelemetry = { version = "0.24.0", features = ["trace"] }
opentelemetry-jaeger-propagator = "0.3.0"
opentelemetry-otlp = { version = "0.17.0", features = [
  "metrics",
  "http-proto",
  "reqwest-client",
] }
test-macros = { path = "../test-macros" }
tracing-subscriber = "0.3.18"
