[package]
name = "xline-client"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Client for Xline"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/xline-client"
categories = ["Client"]
keywords = ["Client", "Xline", "RPC"]

[dependencies]
anyhow = "1.0.81"
clippy-utilities = "0.2.0"
curp = { path = "../curp" }
futures = "0.3.25"
getrandom = "0.2"
http = "0.2.9"
thiserror = "1.0.58"
tokio = { version = "0.2.23", package = "madsim-tokio", features = ["sync"] }
tonic = { version = "0.4.1", package = "madsim-tonic" }
tower = { version = "0.4", features = ["discover"] }
utils = { path = "../utils", features = ["parking_lot"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xlineapi = { path = "../xlineapi" }

[dev-dependencies]
rand = "0.8.5"
test-macros = { path = "../test-macros" }
xline-test-utils = { path = "../xline-test-utils" }
