[package]
name = "xline-client"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Client for Xline"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/xline-client"
categories = ["Client"]
keywords = ["Client", "Xline", "RPC"]

[dependencies]
anyhow = "1.0.90"
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.81"
clippy-utilities = "0.2.0"
curp = { path = "../curp" }
futures = "0.3.25"
getrandom = "0.2"
http = "1.0"
prost = "0.13"
thiserror = "1.0.61"
tokio = { version = "0.2.25", package = "madsim-tokio", features = ["sync"] }
tonic = { version = "0.5.0", package = "madsim-tonic" }
tower = { version = "0.4", features = ["discover"] }
utils = { path = "../utils", features = ["parking_lot"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xlineapi = { path = "../xlineapi" }

[dev-dependencies]
rand = "0.8.5"
test-macros = { path = "../test-macros" }
xline-test-utils = { path = "../xline-test-utils" }

[build-dependencies]
tonic-build = { version = "0.5.0", package = "madsim-tonic-build" }
