[package]
name = "xline"
version = "0.6.1"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Distributed KV storage for metadata"
repository = "https://github.com/xline-kv/Xline"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["KV", "consistency", "metadata"]
categories = ["KV"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
async-stream = "0.3.5"
async-trait = "0.1.81"
axum = "0.7.0"
bytes = "1.7.1"
clap = { version = "4", features = ["derive"] }
clippy-utilities = "0.2.0"
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1.1"
curp = { path = "../curp", version = "0.1.0", features = ["client-metrics"] }
curp-external-api = { path = "../curp-external-api" }
dashmap = "6.1.0"
engine = { path = "../engine" }
event-listener = "5.3.1"
flume = "0.11.0"
futures = "0.3.25"
hyper = "1.0.0"
itertools = "0.13"
jsonwebtoken = "9.3.0"
log = "0.4.22"
merged_range = "0.1.0"
nix = "0.29.0"
opentelemetry = { version = "0.24.0", features = ["metrics"] }
opentelemetry-contrib = { version = "0.16.0", features = [
  "jaeger_json_exporter",
  "rt-tokio",
] }
opentelemetry-otlp = { version = "0.17.0", features = [
  "grpc-tonic",
  "metrics",
  "http-proto",
  "reqwest-client",
] }
opentelemetry-prometheus = { version = "0.17.0" }
opentelemetry_sdk = { version = "0.24.1", features = ["metrics", "rt-tokio"] }
parking_lot = "0.12.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
priority-queue = "2.0.2"
prometheus = "0.13.4"
prost = "0.13.3"
real_tokio = { version = "1", package = "tokio" }
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "0.2.25", package = "madsim-tokio", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad" }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.14"
tonic = { version = "0.5.0", package = "madsim-tonic" }
tonic-health = "0.12.0"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utils = { path = "../utils", features = ["parking_lot"] }
uuid = { version = "1.10.0", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
x509-certificate = "0.23.1"
xlineapi = { path = "../xlineapi" }

[build-dependencies]
tonic-build = { version = "0.5.0", package = "madsim-tonic-build" }

[dev-dependencies]
etcd-client = { version = "0.14.0", features = ["tls"] }
mockall = "0.12.1"
rand = "0.8.5"
strum = "0.26"
strum_macros = "0.26.4"
tempfile = "3"
test-macros = { path = "../test-macros" }
xline-client = { path = "../xline-client" }
xline-test-utils = { path = "../xline-test-utils" }
