[package]
name = "xlinectl"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/xlinectl"
description = "Command line client for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Client"]
keywords = ["Client", "CommandLine"]

[dependencies]
anyhow = "1.0"
clap = "4"
regex = "1.10.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.107"
shlex = "1.3.0"
tokio = "1"
tonic = "0.10.2"
utils = { path = "../utils" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xline-client = { path = "../xline-client" }
xlineapi = { path = "../xlineapi" }
