[package]
name = "xlineutl"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/xlinectl"
description = "Command line client for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Client"]
keywords = ["Client", "CommandLine"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4"
crc32fast = "1.4.0"
engine = { path = "../engine" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.9.0"
tokio = "1"
utils = { path = "../utils" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xline = { path = "../xline" }
